--- a/FindDuplicateFileName/zh-Hant.lproj/InfoPlist.strings
+++ b/FindDuplicateFileName/zh-Hant.lproj/InfoPlist.strings
@@ -1,6 +1,4 @@
-/* 
-  Created by Nixon Shih on 2020/9/24.
-  Copyright © 2020 Nixon Shih. All rights reserved.
-*/
-
+/* Created by Nixon Shih on 2020/9/24.
+  Copyright © 2020 Nixon Shih. All rights reserved. */
 "CFBundleDisplayName" = "Duplicate Finder";
+
