--- a/DuplicateFinder/en.lproj/Localizable.strings
+++ b/DuplicateFinder/en.lproj/Localizable.strings
@@ -4,3 +4,11 @@
 */
 
 "save_preference_check_box_title" = "Save Search Preference";
+"setup_page_choose_folder_text_field_placehodler" = "Choose a target folder";
+"setup_page_title" = "Finds all duplicate files which have the same names";
+"setup_page_check_button_title" = "Check";
+"setup_page_excluded_folder_field_title" = "Excluded paths:";
+"setup_page_excluded_names_field_title" = "Excluded names:";
+"setup_page_excluded_folder_table_column_title" = "Path";
+"setup_page_excluded_names_table_column_title" = "File Name";
+"setup_page_excluded_names_text_field_placehodler" = "Enter the file name and extension. ex. fileName.cmd";
